<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="savindev.myuniversity.welcomescreen.AuthorizationFragment"
    android:visibility="visible"
    card_view:cardCornerRadius="5dp"
    card_view:contentPadding="10dp"
    card_view:cardElevation="5dp">




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:layout_toRightOf="@+id/imageView2">
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:capitalize="none"
                    android:theme="@style/Theme.App.Base"
                    android:textColorHint="#ffffff" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_email"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageView3">
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"

                    android:hint="@string/hint_password"
                    android:theme="@style/Theme.App.Base"
                    android:textColorHint="#ffffff" />

            </android.support.design.widget.TextInputLayout>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_key"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <Button android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:background="@color/accent"

            android:textColor="@android:color/white"/>

    </LinearLayout>



    </android.support.v7.widget.CardView>
