<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".schedule.PairInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.Common.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:id="@+id/header_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/colorPrimary"
                    android:gravity="center_vertical"
                    android:minHeight="50dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Программирование"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"/>
                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="02 января вторник 08:00"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_pair_info" />

    <savindev.myuniversity.Fab
        android:id="@+id/fab"
        style="@style/Widget.MaterialSheetFab.Fab"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_attach_file_white_24dp"
        app:layout_anchor="@id/toolbar_layout"
        app:layout_anchorGravity="bottom|right" />

    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        android:gravity="center|right"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <android.support.v7.widget.CardView
            android:id="@+id/fab_sheet"
            style="@style/Widget.MaterialSheetFab.Sheet">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fab_sheet_item_reminder"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawableStart="@drawable/ic_calendar"
                    android:text="@string/fab_add_reminder" />


                <TextView
                    android:id="@+id/fab_sheet_item_homework"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_book"
                    android:drawableStart="@drawable/ic_book"
                    android:text="@string/fab_add_homework"></TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/fab_sheet_item_note"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_note"
                        android:drawableStart="@drawable/ic_notes_select"
                        android:text="@string/fab_add_note"
                        android:textColor="@color/accent"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </io.codetail.widget.RevealLinearLayout>


</android.support.design.widget.CoordinatorLayout>
